--- a/app/templates/_field.html
+++ b/app/templates/_field.html
@@ -1,3 +1,5 @@
+{% from 'utils.html' import render_icon %}
+
 <div class="table-responsive">
   <table class="table table-sm table-hover">
     <thead>
@@ -18,9 +20,9 @@
           <td>{{ field.demand_type.value }}</td>
           <td>
             {% if field.red_region %}
-              <i class="fa-solid fa-check fa-fw"></i>
+              {{ render_icon("check-circle", extra_classes="color-green") }}
             {% else %}
-              <i class="fa-solid fa-xmark fa-fw"></i>
+              {{ render_icon("x-circle", extra_classes="text-danger") }}
             {% endif %}
           </td>
           <td class="table-action d-print-none">
@@ -30,7 +32,7 @@
                     data-bs-target="#modal"
                     data-form="field"
                     data-modal="edit">
-              <i class="fa-solid fa-pencil"></i>
+              {{ render_icon("pencil-square", extra_classes="color-green") }}
             </button>
           </td>
         </tr>
