--- a/app/templates/_field_crop.html
+++ b/app/templates/_field_crop.html
@@ -1,3 +1,5 @@
+{% from 'utils.html' import render_icon %}
+
 <div class="table-responsive">
   <table class="table table-sm table-hover">
     <thead>
@@ -24,7 +26,7 @@
                   data-form="cultivation"
                   data-modal="edit"
                   data-id="{{ db.cultivation.id }}">
-            <i class="fa-solid fa-pencil"></i>
+            {{ render_icon("pencil-square", extra_classes="color-green") }}
           </button>
         </td>
       </tr>
