--- a/app/templates/_field_fertilization.html
+++ b/app/templates/_field_fertilization.html
@@ -1,3 +1,5 @@
+{% from 'utils.html' import render_icon %}
+
 {% macro render_fertilization(cultivation, fert_class, field) %}
   <div class="table-responsive">
     <table class="table table-sm table-hover table-fertilization">
@@ -28,7 +30,7 @@
                       data-form="fertilization"
                       data-modal="edit"
                       data-id="{{ fertilization.id }}">
-                <i class="fa-solid fa-pencil"></i>
+                {{ render_icon("pencil-square", extra_classes="color-green") }}
               </button>
             </td>
           </tr>
