--- a/app/templates/_field_soil.html
+++ b/app/templates/_field_soil.html
@@ -1,3 +1,5 @@
+{% from 'utils.html' import render_icon %}
+
 <div class="col table-responsive">
   <table class="table table-sm table-hover table-bordered">
     <thead>
@@ -39,7 +41,7 @@
                     data-modal="edit"
                     data-id="{{ sample.id }}"
                     data-field-id="{{ base_field.id }}">
-              <i class="fa-solid fa-pencil"></i>
+              {{ render_icon("pencil-square", extra_classes="color-green") }}
             </button>
           </td>
         </tr>
