--- a/app/templates/fertilizers.html
+++ b/app/templates/fertilizers.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% from 'utils.html' import render_icon %}
 
 {% block app_content %}
   <div class="container">
@@ -67,7 +68,7 @@
                       data-bs-target="#modal"
                       data-form="fertilizer"
                       data-modal="edit">
-                <i class="fa-solid fa-pencil"></i>
+                {{ render_icon("pencil-square", extra_classes="color-green") }}
               </button>
             </td>
           </tr>
@@ -195,7 +196,7 @@
                       data-bs-target="#modal"
                       data-form="fertilizer"
                       data-modal="edit">
-                <i class="fa-solid fa-pencil"></i>
+                {{ render_icon("pencil-square", extra_classes="color-green") }}
               </button>
             </td>
           </tr>
