fix: data-id needed for fieldform

--- a/app/templates/field.html
+++ b/app/templates/field.html
@@ -28,6 +28,7 @@
               data-bs-target="#modal"
               data-form="field"
               data-modal="edit"
+              data-id="{{ base_field.id }}">
         {{ render_icon("pencil-square", extra_classes="color-green") }}
       </button>
       <button class="btn btn-link d-print-none"
