--- a/app/templates/field.html
+++ b/app/templates/field.html
@@ -98,6 +98,16 @@
             <div class="col ms-1">{% include "_field_demand.html" %}</div>
           </div>
           <div class="row organic">
+            <div class="col-6 my-1">
+              <button class="btn btn-success fw-bolder d-print-none"
+                      type="button"
+                      data-bs-toggle="modal"
+                      data-bs-target="#modal"
+                      data-form="fertilization"
+                      data-modal="new">
+                Add fertilization
+              </button>
+            </div>
             <h6 class="fw-bolder text-decoration-underline">Organic</h6>
             <div class="col-xxl-6 ms-1">{{ render_fertilization(db.cultivation, "organic", db.field) }}</div>
             <div class="col ms-1">{{ render_fertilization_nutrients(cultivation, "organic") }}</div>
