feat: form creation for all purposes now possible

--- a/app/templates/_field.html
+++ b/app/templates/_field.html
@@ -31,9 +31,8 @@
                     data-bs-toggle="modal"
                     data-bs-target="#modal"
                     data-form="field"
-                    data-modal="edit">
-              {{ render_icon("pencil-square", extra_classes="color-green") }}
-            </button>
+                    data-modal="edit"
+                    data-id="{{ field.id }}">{{ render_icon("pencil-square", extra_classes="color-green") }}</button>
           </td>
         </tr>
       {% endfor %}
