--- a/app/templates/field.html
+++ b/app/templates/field.html
@@ -95,7 +95,7 @@
                       data-bs-target="#modal"
                       data-form="fertilization"
                       data-modal="new"
-                      data-id="{{ db.field.id }}">Add fertilization</button>
+                      data-id="{{ db.cultivation.id }}">Add fertilization</button>
             </div>
             <h6 class="fw-bolder text-decoration-underline">Organic</h6>
             <div class="col-xxl-6 ms-1">{{ render_fertilization(db.cultivation, "organic", db.field) }}</div>
@@ -133,7 +133,7 @@
             data-bs-target="#modal"
             data-form="soil"
             data-modal="new"
-            data-id="{{ field.id }}">Add soil sample</button>
+            data-id="{{ base_field.id }}">Add soil sample</button>
   </div>
   <!--modifier data-->
   <div class="tab-pane fade"
