refactor: move field templates to a subfolder

--- a/app/templates/fields.html
+++ b/app/templates/fields.html
@@ -32,7 +32,7 @@
           </h2>
           <div class="accordion-collapse collapse" id="base{{ loop.index }}">
             <div class="accordion-body pt-0">
-              {% include "_field.html" %}
+              {% include "_fields_field.html" %}
               <button class="btn btn-sm btn-success fw-500 d-print-none"
                       type="button"
                       data-bs-toggle="modal"
