--- a/app/templates/field.html
+++ b/app/templates/field.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 {% from 'utils.html' import render_icon %}
 {% from "utils.html" import render_accordion with context %}
-{% from "_field_fertilization.html" import render_fertilization with context %}
-{% from "_field_fertilization.html" import render_fertilization_nutrients with context %}
-{# {% from "_field_fertilization.html" import render_total with context %} #}
+{% from "field/_field_fertilization.html" import render_fertilization with context %}
+{% from "field/_field_fertilization.html" import render_fertilization_nutrients with context %}
+{# {% from "field/_field_fertilization.html" import render_total with context %} #}
 
 {% block app_content %}
   <!--field header-->
@@ -84,8 +84,8 @@
         {% for cultivation in field.cultivations if cultivation.cultivation_type == db.cultivation.cultivation_type %}
           <div class="row cultivation">
             <h6 class="fw-bolder text-decoration-underline">Cultivation</h6>
-            <div class="col-xxl-6 ms-1">{% include "_field_crop.html" %}</div>
-            <div class="col ms-1">{% include "_field_demand.html" %}</div>
+            <div class="col-xxl-6 ms-1">{% include "field/_field_crop.html" %}</div>
+            <div class="col ms-1">{% include "field/_field_demand.html" %}</div>
           </div>
           <div class="row organic">
             <div class="col-6 my-1">
@@ -125,7 +125,7 @@
        role="tabpanel"
        aria-labelledby="soil-tab">
     {% call render_accordion(title="Soil Sample", target="soil-sample", style="accordion-soil", collapsed=false) %}
-      {% include "_field_soil.html" %}
+      {% include "field/_field_soil.html" %}
     {% endcall %}
     <button class="btn btn-success fw-bolder d-print-none"
             type="button"
@@ -141,7 +141,7 @@
        role="tabpanel"
        aria-labelledby="info-tab">
     {% call render_accordion(title="Modifiers", target="modifiers", collapsed=false) %}
-      {% include "_field_modifiers.html" %}
+      {% include "field/_field_modifier.html" %}
     {% endcall %}
     <button class="btn btn-success fw-bolder d-print-none"
             type="button"
