--- a/app/templates/field.html
+++ b/app/templates/field.html
@@ -76,6 +76,24 @@
        id="cultivation"
        role="tabpanel"
        aria-labelledby="cultivation-tab">
+    <div class="col-6 my-2">
+      <button class="btn btn-success fw-bolder d-print-none"
+              type="button"
+              data-bs-toggle="modal"
+              data-bs-target="#modal"
+              data-form="fertilization"
+              data-modal="new"
+              data-id="{{ db.field.id }}">Add fertilization</button>
+      {% if (db.field.cultivations | length) < 3 and db.field.field_type.name == "cropland" or (db.field.cultivations | length) == 0 and db.field.field_type.name != "cropland" %}
+        <button class="btn btn-success fw-bolder d-print-none"
+                type="button"
+                data-bs-toggle="modal"
+                data-bs-target="#modal"
+                data-form="cultivation"
+                data-modal="new"
+                data-id="{{ db.field.id }}">Add cultivation</button>
+      {% endif %}
+    </div>
     {% set count = namespace(c = 0) %}
     {% for cult in db.field.cultivations %}
       {% set db.cultivation = cult %}
@@ -88,15 +106,6 @@
             <div class="col ms-1">{% include "field/_field_demand.html" %}</div>
           </div>
           <div class="row organic">
-            <div class="col-6 my-1">
-              <button class="btn btn-success fw-bolder d-print-none"
-                      type="button"
-                      data-bs-toggle="modal"
-                      data-bs-target="#modal"
-                      data-form="fertilization"
-                      data-modal="new"
-                      data-id="{{ db.field.id }}">Add fertilization</button>
-            </div>
             <h6 class="fw-bolder text-decoration-underline">Organic</h6>
             <div class="col-xxl-6 ms-1">{{ render_fertilization(db.cultivation, "organic", db.field) }}</div>
             <div class="col ms-1">{{ render_fertilization_nutrients(cultivation, "organic") }}</div>
@@ -109,15 +118,7 @@
         {% endfor %}
       {% endcall %}
     {% endfor %}
-    {% if count.c < 3 %}
-      <button class="btn btn-success fw-bolder d-print-none"
-              type="button"
-              data-bs-toggle="modal"
-              data-bs-target="#modal"
-              data-form="cultivation"
-              data-modal="new"
-              data-id="{{ db.field.id }}">Add cultivation</button>
-    {% endif %}
+    {% if count.c < 3 %}{% endif %}
   </div>
   <!--soil data-->
   <div class="tab-pane fade"
