--- a/app/templates/field.html
+++ b/app/templates/field.html
@@ -6,151 +6,163 @@
 {# {% from "field/_field_fertilization.html" import render_total with context %} #}
 
 {% block app_content %}
-  <!--field header-->
-  {% set db = namespace(field = none) %}
-  {% for field in base_field.fields if field.year == current_user.year %}
-    {% set db.field = field %}
-  {% endfor %}
-  <div class="row"
-       id="field"
-       data-base-id="{{ base_field.id }}"
-       data-field-id="{{ db.field.id }}">
-    <div class="col">
+  {% if not field %}
+    <div>
       <h1>
         {{ "{prefix:02}-{suffix} {name}".format(prefix=base_field.prefix, suffix=base_field.suffix, name=base_field.name) }}
       </h1>
-      <h6>{{ db.field.field_type.value }} — {{ db.field.area | format_number('.2f', 'ha') }}</h6>
+      <h6>
+        No field data for {{ current_user.year }}.
+        <a href="{{ url_for('main.fields', _anchor='field{}'.format(base_field.id) ) }}">Create it here.</a>
+      </h6>
     </div>
-    <div class="col-4 col-sm-3 d-inline-flex justify-content-end align-items-start">
-      <button class="btn btn-link d-print-none"
-              type="button"
-              data-bs-toggle="modal"
-              data-bs-target="#modal"
-              data-form="field"
-              data-modal="edit"
-              data-id="{{ db.field.id }}">{{ render_icon("pencil-square", extra_classes="color-green") }}</button>
-      <button class="btn btn-link d-print-none"
-              type="button"
-              onclick="window.print();">{{ render_icon("printer", extra_classes="color-green") }}</button>
-    </div>
-    <!-- Maybe 3 dot menu -->
-    {# <div class="collapse collapse-horizontal show" id="fieldMenu">
+  {% else %}
+    <!--field header-->
+    {% set db = namespace(field = none) %}
+    {% for field in base_field.fields if field.year == current_user.year %}
+      {% set db.field = field %}
+    {% endfor %}
+    <div class="row"
+         id="field"
+         data-base-id="{{ base_field.id }}"
+         data-field-id="{{ db.field.id }}">
+      <div class="col">
+        <h1>
+          {{ "{prefix:02}-{suffix} {name}".format(prefix=base_field.prefix, suffix=base_field.suffix, name=base_field.name) }}
+        </h1>
+        <h6>{{ db.field.field_type.value }} — {{ db.field.area | format_number('.2f', 'ha') }}</h6>
+      </div>
+      <div class="col-4 col-sm-3 d-inline-flex justify-content-end align-items-start">
+        <button class="btn btn-link d-print-none"
+                type="button"
+                data-bs-toggle="modal"
+                data-bs-target="#modal"
+                data-form="field"
+                data-modal="edit"
+                data-id="{{ db.field.id }}">{{ render_icon("pencil-square", extra_classes="color-green") }}</button>
+        <button class="btn btn-link d-print-none"
+                type="button"
+                onclick="window.print();">{{ render_icon("printer", extra_classes="color-green") }}</button>
+      </div>
+      <!-- Maybe 3 dot menu -->
+      {# <div class="collapse collapse-horizontal show" id="fieldMenu">
       <button class="btn d-md-none" type="button" data-bs-toggle="collapse" data-bs-target="#fieldMenu" aria-controls="fieldMenu" aria-expanded="false" aria-label="Toggle field menu">
         <i class="fa-solid fa-ellipsis-vertical fa-lg color-green"></i>
       </button>
       <i class="fa-solid fa-bars"></i>
       </div> #}
-  </div>
+    </div>
 
-  <!-- field nav -->
-  <nav class="nav nav-pills bg-green rounded flex-column flex-sm-row my-2 d-print-none"
-       id="field-nav">
-    <button class="nav-link fw-500 text-white flex-sm-fill text-sm-center"
-            id="cultivation-tab"
-            data-bs-toggle="tab"
-            data-bs-target="#cultivation"
-            type="button"
-            role="tab"
-            aria-controls="cultivation"
-            aria-selected="true">Cultivation</button>
-    <button class="nav-link fw-500 text-white flex-sm-fill text-sm-center"
-            id="soil-tab"
-            data-bs-toggle="tab"
-            data-bs-target="#soil"
-            type="button"
-            role="tab"
-            aria-controls="soil"
-            aria-selected="false">Soil</button>
-    <button class="nav-link fw-500 text-white flex-sm-fill text-sm-center"
-            id="info-tab"
-            data-bs-toggle="tab"
-            data-bs-target="#info"
-            type="button"
-            role="tab"
-            aria-controls="info"
-            aria-selected="false">Info</button>
-  </nav>
-
-  <!--cultivation data-->
-  <div class="tab-pane fade"
-       id="cultivation"
-       role="tabpanel"
-       aria-labelledby="cultivation-tab">
-    <div class="col-6 my-2">
-      <button class="btn btn-success fw-bolder d-print-none"
+    <!-- field nav -->
+    <nav class="nav nav-pills bg-green rounded flex-column flex-sm-row my-2 d-print-none"
+         id="field-nav">
+      <button class="nav-link fw-500 text-white flex-sm-fill text-sm-center"
+              id="cultivation-tab"
+              data-bs-toggle="tab"
+              data-bs-target="#cultivation"
               type="button"
-              data-bs-toggle="modal"
-              data-bs-target="#modal"
-              data-form="fertilization"
-              data-modal="new"
-              data-id="{{ db.field.id }}">Add fertilization</button>
-      {% if (db.field.cultivations | length) < 3 and db.field.field_type.name == "cropland" or (db.field.cultivations | length) == 0 and db.field.field_type.name != "cropland" %}
+              role="tab"
+              aria-controls="cultivation"
+              aria-selected="true">Cultivation</button>
+      <button class="nav-link fw-500 text-white flex-sm-fill text-sm-center"
+              id="soil-tab"
+              data-bs-toggle="tab"
+              data-bs-target="#soil"
+              type="button"
+              role="tab"
+              aria-controls="soil"
+              aria-selected="false">Soil</button>
+      <button class="nav-link fw-500 text-white flex-sm-fill text-sm-center"
+              id="info-tab"
+              data-bs-toggle="tab"
+              data-bs-target="#info"
+              type="button"
+              role="tab"
+              aria-controls="info"
+              aria-selected="false">Info</button>
+    </nav>
+
+    <!--cultivation data-->
+    <div class="tab-pane fade"
+         id="cultivation"
+         role="tabpanel"
+         aria-labelledby="cultivation-tab">
+      <div class="col-6 my-2">
         <button class="btn btn-success fw-bolder d-print-none"
                 type="button"
                 data-bs-toggle="modal"
                 data-bs-target="#modal"
-                data-form="cultivation"
+                data-form="fertilization"
                 data-modal="new"
-                data-id="{{ db.field.id }}">Add cultivation</button>
-      {% endif %}
+                data-id="{{ db.field.id }}">Add fertilization</button>
+        {% if (db.field.cultivations | length) < 3 and db.field.field_type.name == "cropland" or (db.field.cultivations | length) == 0 and db.field.field_type.name != "cropland" %}
+          <button class="btn btn-success fw-bolder d-print-none"
+                  type="button"
+                  data-bs-toggle="modal"
+                  data-bs-target="#modal"
+                  data-form="cultivation"
+                  data-modal="new"
+                  data-id="{{ db.field.id }}">Add cultivation</button>
+        {% endif %}
+      </div>
+      {% set count = namespace(c = 0) %}
+      {% for cult in db.field.cultivations %}
+        {% set db.cultivation = cult %}
+        {% set count.c = count.c + 1 %}
+        {% call render_accordion(title=db.cultivation.cultivation_type.value, sub_title=db.cultivation.crop.name, target=db.cultivation.cultivation_type.name, data_id=db.cultivation.id, style="accordion-cultivation") %}
+          {% for cultivation in field.cultivations if cultivation.cultivation_type == db.cultivation.cultivation_type %}
+            <div class="row cultivation">
+              <h6 class="fw-bolder text-decoration-underline">Cultivation</h6>
+              <div class="col-xxl-6 ms-1">{% include "field/_field_crop.html" %}</div>
+              <div class="col ms-1">{% include "field/_field_demand.html" %}</div>
+            </div>
+            <div class="row organic">
+              <h6 class="fw-bolder text-decoration-underline">Organic</h6>
+              <div class="col-xxl-6 ms-1">{{ render_fertilization(db.cultivation, "organic", db.field) }}</div>
+              <div class="col ms-1">{{ render_fertilization_nutrients(cultivation, "organic") }}</div>
+            </div>
+            <div class="row mineral">
+              <h6 class="fw-bolder text-decoration-underline">Mineral</h6>
+              <div class="col-xxl-6 ms-1">{{ render_fertilization(db.cultivation, "mineral", db.field) }}</div>
+              <div class="col ms-1">{{ render_fertilization_nutrients(cultivation, "mineral") }}</div>
+            </div>
+          {% endfor %}
+        {% endcall %}
+      {% endfor %}
+      {% if count.c < 3 %}{% endif %}
     </div>
-    {% set count = namespace(c = 0) %}
-    {% for cult in db.field.cultivations %}
-      {% set db.cultivation = cult %}
-      {% set count.c = count.c + 1 %}
-      {% call render_accordion(title=db.cultivation.cultivation_type.value, sub_title=db.cultivation.crop.name, target=db.cultivation.cultivation_type.name, data_id=db.cultivation.id, style="accordion-cultivation") %}
-        {% for cultivation in field.cultivations if cultivation.cultivation_type == db.cultivation.cultivation_type %}
-          <div class="row cultivation">
-            <h6 class="fw-bolder text-decoration-underline">Cultivation</h6>
-            <div class="col-xxl-6 ms-1">{% include "field/_field_crop.html" %}</div>
-            <div class="col ms-1">{% include "field/_field_demand.html" %}</div>
-          </div>
-          <div class="row organic">
-            <h6 class="fw-bolder text-decoration-underline">Organic</h6>
-            <div class="col-xxl-6 ms-1">{{ render_fertilization(db.cultivation, "organic", db.field) }}</div>
-            <div class="col ms-1">{{ render_fertilization_nutrients(cultivation, "organic") }}</div>
-          </div>
-          <div class="row mineral">
-            <h6 class="fw-bolder text-decoration-underline">Mineral</h6>
-            <div class="col-xxl-6 ms-1">{{ render_fertilization(db.cultivation, "mineral", db.field) }}</div>
-            <div class="col ms-1">{{ render_fertilization_nutrients(cultivation, "mineral") }}</div>
-          </div>
-        {% endfor %}
+    <!--soil data-->
+    <div class="tab-pane fade"
+         id="soil"
+         role="tabpanel"
+         aria-labelledby="soil-tab">
+      {% call render_accordion(title="Soil Sample", target="soil-sample", style="accordion-soil", collapsed=false) %}
+        {% include "field/_field_soil.html" %}
       {% endcall %}
-    {% endfor %}
-    {% if count.c < 3 %}{% endif %}
-  </div>
-  <!--soil data-->
-  <div class="tab-pane fade"
-       id="soil"
-       role="tabpanel"
-       aria-labelledby="soil-tab">
-    {% call render_accordion(title="Soil Sample", target="soil-sample", style="accordion-soil", collapsed=false) %}
-      {% include "field/_field_soil.html" %}
-    {% endcall %}
-    <button class="btn btn-success fw-bolder d-print-none"
-            type="button"
-            data-bs-toggle="modal"
-            data-bs-target="#modal"
-            data-form="soil"
-            data-modal="new"
-            data-id="{{ base_field.id }}">Add soil sample</button>
-  </div>
-  <!--modifier data-->
-  <div class="tab-pane fade"
-       id="info"
-       role="tabpanel"
-       aria-labelledby="info-tab">
-    {% call render_accordion(title="Modifiers", target="modifiers", collapsed=false) %}
-      {% include "field/_field_modifier.html" %}
-    {% endcall %}
-    <button class="btn btn-success fw-bolder d-print-none"
-            type="button"
-            data-bs-toggle="modal"
-            data-bs-target="#modal"
-            data-form="modifier"
-            data-modal="new"
-            data-id="{{ db.field.id }}">Add modifier</button>
-  </div>
+      <button class="btn btn-success fw-bolder d-print-none"
+              type="button"
+              data-bs-toggle="modal"
+              data-bs-target="#modal"
+              data-form="soil"
+              data-modal="new"
+              data-id="{{ base_field.id }}">Add soil sample</button>
+    </div>
+    <!--modifier data-->
+    <div class="tab-pane fade"
+         id="info"
+         role="tabpanel"
+         aria-labelledby="info-tab">
+      {% call render_accordion(title="Modifiers", target="modifiers", collapsed=false) %}
+        {% include "field/_field_modifier.html" %}
+      {% endcall %}
+      <button class="btn btn-success fw-bolder d-print-none"
+              type="button"
+              data-bs-toggle="modal"
+              data-bs-target="#modal"
+              data-form="modifier"
+              data-modal="new"
+              data-id="{{ db.field.id }}">Add modifier</button>
+    </div>
+  {% endif %}
 
 {% endblock app_content %}
