--- a/app/templates/fields.html
+++ b/app/templates/fields.html
@@ -17,8 +17,7 @@
             <button class="accordion-button collapsed"
                     type="button"
                     data-bs-toggle="collapse"
-                    data-bs-target="#base{{ loop.index }}"
-                    data-id="{{ base_field.id }}">
+                    data-bs-target="#field{{ base_field.id }}">
               <strong>
                 {{ "{prefix:02}-{suffix} {name}".format(prefix=base_field.prefix, suffix=base_field.suffix, name=base_field.name) }}
               </strong>
@@ -30,7 +29,7 @@
                    data-id="{{ base_field.id }}">{{ render_icon("pencil-square", extra_classes="color-green") }}</div>
             </button>
           </h2>
-          <div class="accordion-collapse collapse" id="base{{ loop.index }}">
+          <div class="accordion-collapse collapse" id="field{{ base_field.id }}">
             <div class="accordion-body pt-0">
               {% include "_fields_field.html" %}
               <button class="btn btn-sm btn-success fw-500 d-print-none"
@@ -39,7 +38,7 @@
                       data-bs-target="#modal"
                       data-form="field"
                       data-modal="new"
-                      data-id="{{ base_field.id }}">✚ New</button>
+                      data-id="{{ base_field.id }}">Add cultivation year</button>
             </div>
           </div>
         </div>
