--- a/app/templates/utils.html
+++ b/app/templates/utils.html
@@ -260,7 +260,7 @@ the necessary fix for required=False attributes, but will also not set the requi
       {%- endfor %}
     </fieldset>
   {% else -%}
-    <div class="{{ form_group_classes }} {%- if form_type == 'horizontal' %} row {% elif form_type == 'floating' %} form-floating {% endif -%} {%- if field.flags.required %} required{% endif -%}">
+    <div class="{{ form_group_classes }} {%- if form_type == 'horizontal' %} row {% elif form_type == 'floating' %} form-floating {% endif -%} {%- if field.flags.required %}required{% endif -%}">
       {%- if form_type == "inline" %}
         {{ field.label(class="visually-hidden") |safe }}
         {%- if field.type in ['DecimalRangeField', 'IntegerRangeField'] %}
@@ -317,7 +317,9 @@ the necessary fix for required=False attributes, but will also not set the requi
           {% endcall %}
         {%- endif %}
       {% elif form_type == "floating" %}
-
+        {% if field.render_kw and "placeholder" in field.render_kw %}
+          {% set extra_classes = extra_classes + " has-placeholder" %}
+        {% endif %}
         {%- if field.type in ['DecimalRangeField', 'IntegerRangeField'] %}
           {% if field.errors %}
             {{ field(class="form-range is-invalid%s" % extra_classes, **kwargs) |safe }}
@@ -337,7 +339,11 @@ the necessary fix for required=False attributes, but will also not set the requi
             {{ field(class="form-control%s" % extra_classes, **kwargs) |safe }}
           {% endif %}
         {%- endif %}
-        {{ field.label(class="form-label text-nowrap") |safe }}
+        {% if field.render_kw and "placeholder" in field.render_kw %}
+          {{ field.label(class="form-label text-nowrap has-placeholder") |safe }}
+        {% else %}
+          {{ field.label(class="form-label text-nowrap") |safe }}
+        {% endif %}
         {%- if field.errors %}
           {%- for error in field.errors %}<div class="invalid-feedback d-block">{{ error }}</div>{%- endfor %}
         {%- elif field.description -%}
