--- a/app/templates/modal_content.html
+++ b/app/templates/modal_content.html
@@ -16,11 +16,14 @@
 <div class="modal-footer px-4">
   {%- if modal == "edit" -%}
     <ul class="ps-0">
-      <button class="btn btn-danger" type="submit" for="submit" form="modalForm">Delete</button>
+      <button class="btn btn-danger shadow"
+              type="submit"
+              for="submit"
+              form="modalForm">Delete</button>
     </ul>
   {%- endif -%}
   <ul class="ms-auto">
-    <button class="btn btn-success"
+    <button class="btn btn-success shadow"
             type="submit"
             for="submit"
             form="modalForm"
@@ -34,6 +37,8 @@
     </button>
   </ul>
   <ul class="ps-0">
-    <button type="button" class="btn btn-secondary ms-1" data-bs-dismiss="modal">Cancel</button>
+    <button type="button"
+            class="btn btn-secondary shadow ms-1"
+            data-bs-dismiss="modal">Cancel</button>
   </ul>
 </div>
