fix(forms): only submit with enter, don't delete

--- a/app/templates/modal_content.html
+++ b/app/templates/modal_content.html
@@ -20,7 +20,8 @@
               type="submit"
               for="submit"
               form="modalForm"
-              name="delete">Delete</button>
+              name="delete"
+              tabindex="-1">Delete</button>
     </ul>
   {%- endif -%}
   <ul class="ms-auto">
