--- a/app/templates/field.html
+++ b/app/templates/field.html
@@ -88,6 +88,7 @@
          role="tabpanel"
          aria-labelledby="cultivation-tab">
       <div class="col-6 my-2">
+        {% if (db.field.cultivations | length) > 0 and (db.field.field_type.name == "cropland" or db.field.field_type.name == "grassland") %}
         <button class="btn btn-success fw-bolder d-print-none"
                 type="button"
                 data-bs-toggle="modal"
@@ -95,6 +96,7 @@
                 data-form="fertilization"
                 data-modal="new"
                 data-id="{{ db.field.id }}">Add fertilization</button>
+        {% endif %}
         {% if (db.field.cultivations | length) < 3 and db.field.field_type.name == "cropland" or (db.field.cultivations | length) == 0 and db.field.field_type.name != "cropland" %}
           <button class="btn btn-success fw-bolder d-print-none"
                   type="button"
