--- a/app/templates/crops.html
+++ b/app/templates/crops.html
@@ -20,14 +20,12 @@
         <th scope="col">Kind</th>
         <th scope="col">Feedable</th>
         <th scope="col">Residue</th>
-        <th scope="col">Legume Rate</th>
         <th scope="col">Nmin Depth</th>
         <th scope="col">Target Demand</th>
         <th scope="col">Target Yield</th>
         <th scope="col">Variable Yield</th>
         <th scope="col">Target Protein</th>
         <th scope="col">Variable Protein</th>
-        <th scope="col">N</th>
         <th scope="col">
           P<sub>2</sub>O<sub>5</sub>
         </th>
@@ -45,6 +43,7 @@
           K<sub>2</sub>O
         </th>
         <th scope="col">MgO</th>
+        <th scope="col"></th>
       </tr>
     </thead>
     <tbody>
@@ -69,14 +68,12 @@
               {{ render_icon("x-circle", extra_classes="text-danger") }}
             {% endif %}
           </td>
-          <td>{{ crop.legume_rate.value }}</td>
           <td>{{ crop.nmin_depth.value }}</td>
           <td>{{ crop.target_demand }}</td>
           <td>{{ crop.target_yield }}</td>
           <td>{{ "{}, {}".format(crop.pos_yield, crop.neg_yield) }}</td>
           <td>{{ crop.target_protein }}</td>
           <td>{{ crop.var_protein }}</td>
-          <td>{{ crop.n }}</td>
           <td>{{ crop.p2o5 }}</td>
           <td>{{ crop.k2o }}</td>
           <td>{{ crop.mgo }}</td>
