feat: change year selection

--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -41,7 +41,7 @@
                role="button"
                data-bs-toggle="dropdown"
                aria-expanded="false">
-              Cultivation <span class="badge bg-green-50 translate-middle position-absolute">{{ "{year:d}".format(year=current_user.year) }}</span>
+              <span class="badge fs-normal bg-green-50">{{ current_user.year }}</span>
             </a>
             <ul class="dropdown-menu" aria-labelledby="cultivationDropdown">
               <li>
